# md2slack

./: .gitignore  CLAUDE.md  README.md  md2slack  md2slack.py  md2slack.yml.sample  pyproject.toml  requirements.txt
md2slack_pkg/: cli.py  converter.py
