[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "md2slack"
version = "0.1.0"
description = "A utility to convert Markdown to Slack's mrkdwn format, with espanso integration."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
authors = [
  {name = "Your Name", email = "you@example.com"},
]
keywords = ["markdown", "slack", "mrkdwn", "espanso", "converter"]

dependencies = [
  "markdown-to-mrkdwn>=0.2.0",
  "pyperclip>=1.8.0",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing :: Markup",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/user/md2slack" # Placeholder
Repository = "https://github.com/user/md2slack" # Placeholder

[project.scripts]
md2slack = "md2slack_pkg.cli:main"
